# biases-in-the-blind-spot

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
biases_in_the_blind_spot/: prompting.py  util.py
biases_in_the_blind_spot/concept_pipeline/: api_llm_base.py  base_classes.py  baseline_responses.py  baseline_verbalization.py  bias_tester.py  cluster_id.py  concept.py  concept_bias_test_result.py  concept_deduplicator.py  concept_id.py  concept_pipeline.py  concept_pipeline_dataset.py  concept_pipeline_dataset_preparer.py  concept_pipeline_result.py  concept_side.py  data_consistency.py  implicit_concept_detector.py  input_clusterer.py  input_clusters.py  input_id.py  input_prefilter.py  input_sanitizer.py  pipeline_persistence.py  plotting.py  response_id.py  responses_generator.py  stage.py  statistics.py  unfaithful_concepts.py  variation_bias.py  variation_pair.py  variation_pair_id.py  variation_pair_responses.py  variation_pair_verbalization.py  variation_verbalization.py  variations_generator.py  variations_quality_checker.py  verbalization_check_result.py  verbalization_detector.py
biases_in_the_blind_spot/llm_bias/: dataset.py  hiring_bias_prompts.py  model_utils.py
tests/concept_pipeline/: conftest.py  helpers.py  test_api_llm_base.py  test_baseline_responses.py  test_baseline_responses_flow.py  test_baseline_verbalization.py  test_baseline_verbalization_filtering.py  test_bias_tester.py  test_concept.py  test_concept_bias_test_result.py  test_concept_pipeline_dataset.py  test_concept_pipeline_result.py  test_data_consistency.py  test_flipped_variation_pairs_carryover_consistency.py  test_ids.py  test_input_prefilter.py  test_pipeline_persistence.py  (+15 more)
(+161 files in other folders)
